test/functions/generic/poi/expBySquaring-repro.good
expBySquaring-repro.chpl:36: In function 'main':
expBySquaring-repro.chpl:40: error: done
